NS-17 Correct CSS to realign global-search button

--- a/custom/themes/ns_custom/css/custom.css
+++ b/custom/themes/ns_custom/css/custom.css
@@ -300,7 +300,7 @@ form.contact-message-feedback-form.contact-message-form.contact-form
     width: 90px;
 }
 
-#edit-actions {
+form.bibcite-reference-confirm-form.confirmation #edit-actions {
   margin-top: 10px;
 }
 
